controlroom view done

--- a/templates/controlroom.html
+++ b/templates/controlroom.html
@@ -2,7 +2,7 @@
 <html>
 <title>Excel 2017 | Controlroom</title>
 <head>
-	{% load staticfiles %}
+	{% load static %}
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="{% static "controlroom/css/main.css" %}">
@@ -235,7 +235,7 @@
 							<option value="venue">venue</option>
 							<option value="eventname">eventname</option>
 							<option value="excelid">excelid</option>
-							<option value="events of the day">events of the day</option>
+							<option value="events of the day">Events of the day</option>
 						</select>
 					</div>
 					<div class="col-sm-6">
