hide excel logo

--- a/templates/controlroom.html
+++ b/templates/controlroom.html
@@ -214,9 +214,9 @@
 		<div class="container1 container-fluid">
 			<div class="navbar-header logos_section col-sm-12" >
 				<div class="col-sm-6">
-					<img onclick="navhome()" src="{% static "register/images/excel2018.png" %}"/>
+					<!-- <img onclick="navhome()" src="{% static "register/images/excel2018.png" %}"/> -->
 				</div>
-			</div>
+			<!-- </div> -->
 			{% if error1 %}
 			<div class="text-danger text-center col-sm-6" role="alert">
 				<strong>Input needed</strong>
