--- a/templates/intermediate.html
+++ b/templates/intermediate.html
@@ -88,7 +88,7 @@
 <body style="overflow-x:hidden; ">
 			<div class="logos_section col-sm-12" style="margin-top:20px;">
 				<div class="col-sm-6">
-					<img onclick="navhome()" src="{% static "register/images/excel2018.png" %}"/>
+					<!-- <img onclick="navhome()" src="{% static "register/images/excel2018.png" %}"/> -->
 				</div>
 			</div>
 		<div id="res">
