--- a/templates/test.html
+++ b/templates/test.html
@@ -47,8 +47,8 @@
 					<a class="instagram" target="_blank" href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
 				</div>		
 				<div class="logos_section">
-					<a href="http://mec.ac.in/" target="_blank"><img src="{% static "register/images/mec_logo.png" %}"></a>
-					<img src="{% static "register/images/excel2017.png" %}">
+					<!-- <a href="http://mec.ac.in/" target="_blank"><img src="{% static "register/images/mec_logo.png" %}"></a> -->
+					<!-- <img src="{% static "register/images/excel2017.png" %}"> -->
 				</div>
 			</div>
 		</div>
