--- a/templates/venupdate.html
+++ b/templates/venupdate.html
@@ -48,7 +48,7 @@
 				</div>		
 				<div class="logos_section">
 					<a href="http://mec.ac.in/" target="_blank"><img src="{% static "register/images/mec_logo.png" %}"></a>
-					<img src="{% static "register/images/excel2018.png" %}">
+					<!-- <img src="{% static "register/images/excel2018.png" %}"> -->
 				</div>
 			</div>
 		</div>
