--- a/templates/certificate.html
+++ b/templates/certificate.html
@@ -149,7 +149,7 @@
 		<div class="container1 container-fluid">
 			<div class="navbar-header logos_section col-sm-12" >
 				<div class="col-sm-6">
-					<img onclick="navhome()" src="{% static "register/images/excel2018.png" %}"/>
+					<!-- <img onclick="navhome()" src="{% static "register/images/excel2018.png" %}"/> -->
 				</div>
 			</div>
 			{% if error1 %}
