--- a/templates/searchby.html
+++ b/templates/searchby.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html> -->
 <html>
 <title>Excel 2018 | Searchby</title>
 <head>
@@ -48,7 +48,7 @@
 		<div class="container1 container-fluid">
 			<div class="navbar-header logos_section col-sm-12" >
 				<div class="col-sm-6">
-					<img src="{% static "register/images/excel2018.png" %}"/>
+					<!-- <img src="{% static "register/images/excel2018.png" %}"/> -->
 				</div>
 			</div>
 			{% if error1 %}
