--- a/templates/venuedet.html
+++ b/templates/venuedet.html
@@ -18,7 +18,7 @@
 	
 	<body>
 	<div class="logos_section">
-		<img onclick="navhome()" src="{% static "register/images/excel2018.png" %}"/>
+		<!-- <img onclick="navhome()" src="{% static "register/images/excel2018.png" %}"/> -->
 	</div>	
 		<div class="container" style="text-align: center;margin: auto;padding: auto;padding-top:10px;">
 			<div class="row">
